ng-template-outlet: Added route for outlet cmp

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+@use './custom-styles/colors';
+@use './custom-styles/button';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100vh;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+}
