--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,17 +17,17 @@ body {
   box-sizing: border-box;
 }
 
-ul,
-li {
+:where(ul, li) {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-a {
-  text-decoration: none;
+:where(img) {
+  display: block;
 }
 
-img {
-  display: block;
+:where(a) {
+  text-decoration: none;
+  color: black;
 }
